[package]
name = "cfst-backend"
version = "0.0.4"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.12.0"
prost = "0.13.1"
tokio = { version = "1.38.0", features = ["full"]}
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics",]}
versions = "6.3.0"
simple_logger = "5.0.0"
log = "0.4.22"
tokio-stream = "0.1.15"
url = "2.5.2"
chrono = "0.4.38"
sha2 = "0.10.8"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = "0.12.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
memmap2 = "0.9.4"
byteorder = "1.5.0"
encoding_rs = "0.8.34"
pinyin = "0.10.0"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.12.0"
